fix: Sidebar collapse css

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -37,7 +37,7 @@ body {
 }
 
 .ant-layout-sider-trigger {
-  width: 240px !important;
+  width: 239px !important;
   z-index: 1000 !important;
   background-color: var(--#{$prefix}primary) !important;
 }
